# nvfbc-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
nvfbc/: Cargo.toml  README.md
nvfbc-sys/: Cargo.toml  bindgen  build.rs  wrapper.h
nvfbc-sys/src/: generated.rs  lib.rs
nvfbc/examples/: cuda-screenshot.rs  screenshot.rs  system-screenshot.rs
nvfbc/src/: common.rs  cuda.rs  error.rs  lib.rs  system.rs  types.rs
