[package]
name = "nvfbc-sys"
version = "0.1.5"
edition = "2021"
description = "Raw FFI bindings for NVFBC, an NVIDIA API for capturing the front buffer from NVIDIA GPUs."
authors = ["Hans Gaiser <hans@hgaiser.nl>"]
license = "BSD-2-Clause"
keywords = ["NVFBC"]
categories = ["multimedia::video"]
repository = "https://github.com/hgaiser/nvfbc-rs"

[build-dependencies]
# https://github.com/rust-lang/rust-bindgen/issues/753
bindgen = { git = "https://github.com/jbaublitz/rust-bindgen.git", branch = "issue-rust-bindgen-753" }

