[package]
name = "nvfbc"
version = "0.1.0"
edition = "2021"
description = "Safe bindings for NVFBC, an NVIDIA API for capturing the front buffer from NVIDIA GPUs."
authors = ["Hans Gaiser <hans@hgaiser.nl>"]
license = "BSD-2-Clause"
keywords = ["NVFBC"]
categories = ["multimedia::video"]
repository = "https://github.com/hgaiser/nvfbc-rs"

[dependencies]
nvfbc-sys = { path = "../nvfbc-sys" }

[dev-dependencies]
image = "0.24.2"
