[package]
name = "nvfbc"
version = "0.1.4"
edition = "2021"
description = "Safe bindings for NVFBC, an NVIDIA API for capturing the front buffer from NVIDIA GPUs."
authors = ["Hans Gaiser <hans@hgaiser.nl>"]
license = "BSD-2-Clause"
keywords = ["NVFBC"]
categories = ["multimedia::video"]
repository = "https://github.com/hgaiser/nvfbc-rs"

[dependencies]
nvfbc-sys = { version = "0.1.3", path = "../nvfbc-sys" }

[dev-dependencies]
image = "0.24.2"
rustacuda = "0.1.3"
rustacuda_core = "0.1.2"
rustacuda_derive = "0.1.2"
